--- a/src/main/resources/config/product.properties
+++ b/src/main/resources/config/product.properties
@@ -1,4 +1,5 @@
-jdbc.driver=com.mysql.jdbc.Driver
+
+jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://10.10.57.131/focus_search?useUnicode=true&characterEncoding=utf-8
 jdbc.username=focus_search
 jdbc.password=uJaMGHKvJM41BEJ
