--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,14 @@
 		<fastjson-version>1.2.0</fastjson-version>
 		<jackson.version>2.4.2</jackson.version>
 		<mybatis.version>3.2.7</mybatis.version>
-        <mybatis.spring.version>1.2.2</mybatis.spring.version>
-        <jdbc.driver.version>5.1.22</jdbc.driver.version>
-        <jest.version>0.1.3</jest.version>
+		<mybatis.spring.version>1.2.2</mybatis.spring.version>
+		<jdbc.driver.version>5.1.22</jdbc.driver.version>
+		<jest.version>0.1.3</jest.version>
 	</properties>
 
 	<!-- 依赖项定义 -->
 	<dependencies>
-	    <!-- alibaba json -->
+		<!-- alibaba json -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -201,27 +201,27 @@
 			<version>1.9</version>
 		</dependency>
 		<dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>${mybatis.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis.spring.version}</version>
-        </dependency>
-        
-        <!-- jdbc driver -->
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>${mybatis.spring.version}</version>
+		</dependency>
+
+		<!-- jdbc driver -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${jdbc.driver.version}</version>
 		</dependency>
-		
-	   <dependency>
-		  <groupId>org.codehaus.jackson</groupId>
-		  <artifactId>jackson-mapper-asl</artifactId>
-		  <version>1.9.13</version>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -229,9 +229,21 @@
 			<version>1.9.13</version>
 		</dependency>
 		<dependency>
-		  <groupId>fakepath</groupId>
-		  <artifactId>jxl</artifactId>
-		  <version>2.4.2</version>
+			<groupId>fakepath</groupId>
+			<artifactId>jxl</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jxls</groupId>
+			<artifactId>jxls-core</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.11</version>
 		</dependency>
 	</dependencies>
 
@@ -333,7 +345,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<!--通过profile控制maven-assembly-plugin的打包行为, 在src/main/assemble/package.xml中被引用 -->
 	<profiles>
 		<profile>
@@ -361,13 +373,13 @@
 			</properties>
 		</profile>
 	</profiles>
-	
+
 	<!--配置自己maven 发布的私服地址 -->
-    <distributionManagement>
-        <repository>
-            <id>deployment</id>
-            <name>Snapshots</name>
-            <url>http://10.10.90.156/nexus/content/repositories/snapshots/</url>
-        </repository>
-    </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>deployment</id>
+			<name>Snapshots</name>
+			<url>http://10.10.90.156/nexus/content/repositories/snapshots/</url>
+		</repository>
+	</distributionManagement>
 </project>
