--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
 		<!-- Plugin的属性定义 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
-		<log4j.version>1.2.17</log4j.version>
+<!-- 		<log4j.version>1.2.17</log4j.version>
 		<slf4j-version>1.7.6</slf4j-version>
-		<log4j-version>1.2.17</log4j-version>
+		<log4j-version>1.2.17</log4j-version> -->
 		<jest.version>0.1.3</jest.version>
 		<elasticsearch.version>1.3.4</elasticsearch.version>
 		<fastjson-version>1.2.0</fastjson-version>
@@ -135,37 +135,18 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
-		</dependency>
+			</dependency>
 		<!-- LOGGING begin -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${slf4j-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j-version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j-version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<!-- test -->
+	    <dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.1.3</version>
+	    </dependency>
+        <!-- test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
