--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 		<mybatis.spring.version>1.2.2</mybatis.spring.version>
 		<jdbc.driver.version>5.1.22</jdbc.driver.version>
 		<jest.version>0.1.3</jest.version>
+		<quartz.version>1.6.1</quartz.version>
 	</properties>
 
 	<!-- 依赖项定义 -->
@@ -163,7 +164,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j-version}</version>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		<!-- test -->
 		<dependency>
@@ -244,6 +245,12 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.11</version>
+		</dependency>
+		<!-- Timer -->
+		<dependency>
+			<groupId>org.opensymphony.quartz</groupId>
+			<artifactId>quartz-all</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 	</dependencies>
 
