--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,7 @@
 				<version>2.4</version>
 				<configuration>
 					<descriptors>
-						<descriptor>src/main/assemble/package.xml</descriptor>
+						<descriptor>deploy/assemble/package.xml</descriptor>
 					</descriptors>
 				</configuration>
 				<executions>
