--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,26 +7,17 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:/applicationContext.xml
+			classpath*:applicationContext.xml
 		</param-value>
 	</context-param>
 	<context-param>
 		<param-name>spring.profiles.default</param-name>
 		<param-value>test_sce</param-value>
 	</context-param>
-	<!-- timer -->
-	<context-param>
-		<param-name>config-file</param-name>
-		<param-value>src/main/resources/quartz.properties</param-value>
-	</context-param>
 	<context-param>
 		<param-name>shutdown-on-unload</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	<!-- <context-param>
-		<param-name>spring.profiles.active</param-name>
-		<param-value>production</param-value>
-	</context-param> -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -68,17 +59,4 @@
 	<session-config>
 		<session-timeout>20</session-timeout>
 	</session-config>
-
-<!-- 	<error-page>
-		<exception-type>java.lang.Throwable</exception-type>
-		<location>/WEB-INF/views/error/500.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/WEB-INF/views/error/500.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>404</error-code>
-		<location>/WEB-INF/views/error/404.jsp</location>
-	</error-page> -->
 </web-app>
