--- a/src/main/resources/config/local.properties
+++ b/src/main/resources/config/local.properties
@@ -8,3 +8,7 @@ jdbc.minIdle=1
 jdbc.maxIdle=10
 jdbc.maxWait=3000
 jdbc.maxActive=3
+
+ik.url=http://10.10.24.179:9200/focus_combinesearch_v1.1/_analyze?analyzer=ik&text=
+
+redis.expiredTime=300
