修改原工程中分词效果和人工干预两个功能，使其在测试环境下调测试接口，在生产环境使用生产接口

--- a/src/main/resources/config/test_sce.properties
+++ b/src/main/resources/config/test_sce.properties
@@ -10,5 +10,6 @@ jdbc.maxWait=3000
 jdbc.maxActive=3
 
 ik.url=http://10.10.24.179:9200/focus_combinesearch_v1.1/_analyze?analyzer=ik&text=
+ik.urlSmart=http://10.10.24.179:9200/focus_house/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=600
