--- a/src/main/resources/config/product.properties
+++ b/src/main/resources/config/product.properties
@@ -9,6 +9,8 @@ jdbc.maxIdle=10
 jdbc.maxWait=3000
 jdbc.maxActive=3
 
+
 ik.url=http://es.search.focus.cn:9200/focus_combinesearch_v1.1/_analyze?analyzer=ik&text=
+ik.urlSmart=http://es.search.focus.cn:9200/focus_house/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=86400
