--- a/src/main/resources/config/local.properties
+++ b/src/main/resources/config/local.properties
@@ -10,8 +10,8 @@ jdbc.maxWait=3000
 jdbc.maxActive=3
 
 #index url
-ik.url=http://10.10.24.179:9200/focus_combinesearch_v1.1/_analyze?analyzer=ik&text=
+ik.url=http://10.10.24.179:9200/focus_house_alias/_analyze?analyzer=ik&text=
 #search url
-ik.urlSmart=http://10.10.24.179:9200/focus_house/_analyze?analyzer=ik_smart&text=
+ik.urlSmart=http://10.10.24.179:9200/focus_house_alias/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=300
