--- a/src/main/resources/config/test_sce.properties
+++ b/src/main/resources/config/test_sce.properties
@@ -9,7 +9,7 @@ jdbc.maxIdle=10
 jdbc.maxWait=3000
 jdbc.maxActive=3
 
-ik.url=http://10.10.24.179:9200/focus_combinesearch_v1.1/_analyze?analyzer=ik&text=
-ik.urlSmart=http://10.10.24.179:9200/focus_house/_analyze?analyzer=ik_smart&text=
+ik.url=http://10.10.24.179:9200/focus_house_alias/_analyze?analyzer=ik&text=
+ik.urlSmart=http://10.10.24.179:9200/focus_house_alias/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=3600
