--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,20 @@
 					<!-- <webAppConfig> <contextPath>/${project.artifactId}</contextPath> 
 						</webAppConfig> -->
 				</configuration>
+								<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<scanIntervalSeconds>0</scanIntervalSeconds>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
