--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,11 @@
  			<artifactId>sce-jedis-support</artifactId>
   			<version>1.0-SNAPSHOT</version>
         </dependency>
+	<dependency>
+		<groupId>org.mortbay.jetty</groupId>
+		<artifactId>jsp-2.1</artifactId>
+		<version>6.0.0</version>
+	</dependency>
 	</dependencies>
 
 
