--- a/src/main/resources/config/product.properties
+++ b/src/main/resources/config/product.properties
@@ -10,7 +10,7 @@ jdbc.maxWait=3000
 jdbc.maxActive=3
 
 
-ik.url=http://es.search.focus.cn:9200/focus_house_alias/_analyze?analyzer=ik&text=
-ik.urlSmart=http://es.search.focus.cn:9200/focus_house_alias/_analyze?analyzer=ik_smart&text=
+ik.url=http://10.16.44.116:9001/focus_house_alias/_analyze?analyzer=ik&text=
+ik.urlSmart=http://10.16.44.116:9001/focus_house_alias/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=86400
