--- a/deploy/assemble/package.xml
+++ b/deploy/assemble/package.xml
@@ -3,9 +3,9 @@
           xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 
           http://maven.apache.org/xsd/assembly-1.1.2.xsd"
           >
-    <id>focus-search-admin</id>
+    <id>src</id>
     <formats>
-        <format>zip</format>
+        <format>dir</format>
     </formats>
     <includeBaseDirectory>false</includeBaseDirectory>
     <files>
@@ -36,6 +36,13 @@
                 <include>**</include>
             </includes>
             <outputDirectory>/app/userLibrary</outputDirectory>
+        </fileSet>
+        <fileSet>
+            <directory>${basedir}/conf</directory>
+            <includes>
+                <include>**</include>
+            </includes>
+            <outputDirectory>/conf</outputDirectory>
         </fileSet>
     </fileSets>
 </assembly>
