--- a/conf/env.conf
+++ b/conf/env.conf
@@ -1,4 +1,4 @@
-#!/bin/bash
+﻿#!/bin/bash
 ######################
 # 设置服务启动环境，，目前焦点的线上的服务都启动在10.10和10.16 这2个机房，测试环境部署在10.31的机房，开发环境部署在10.121机房
 ######################
@@ -27,7 +27,7 @@ jdk="jdk-7u80"
 #检查连接，服务启动后， 本机ip+port+url 的方式探测服务是否启动
 #dubbo服务使用dubbo montion中注册的的service名字来验证启动.
 #http服务url示例   url="check/live" 
-url="/health"
+url="health"
 
 ####dubbo 服务需要填写如下信息################################
 #dubbo rpc url示例 url="cn.focus.recommend.rpc.service.ProjectRecommendService" 
