--- a/conf/env.conf
+++ b/conf/env.conf
@@ -2,8 +2,7 @@
 ######################
 # 设置服务启动环境，，目前焦点的线上的服务都启动在10.10和10.16 这2个机房，测试环境部署在10.31的机房，开发环境部署在10.121机房
 ######################
-SET_ENV="product"
-ENV=$SET_ENV
+ENV=$ENV
 
 #####该项目的工程名##########
 project_name="focus-search-admin"
