--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,5 +1,5 @@
 ### set log levels ###
-log4j.rootLogger = info
+log4j.rootLogger = info,console,worker-log
 
 #单独指定输出某个包的日志级别
 log4j.logger.net.paoding.rose=error
