--- a/conf/env.conf
+++ b/conf/env.conf
@@ -25,8 +25,8 @@ jdk="jdk-7u80"
 
 #检查连接，服务启动后， 本机ip+port+url 的方式探测服务是否启动
 #dubbo服务使用dubbo montion中注册的的service名字来验证启动.
-#http服务url示例   url="check/live" 
-url="health"
+#http服务url示例   url="/check/live" 
+url="/health"
 
 ####dubbo 服务需要填写如下信息################################
 #dubbo rpc url示例 url="cn.focus.recommend.rpc.service.ProjectRecommendService" 
