--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,25 +1,40 @@
 ### set log levels ###
-log4j.rootLogger = info,console,worker-log
+log4j.rootLogger = INFO,applog,stderr
 
 #单独指定输出某个包的日志级别
 log4j.logger.net.paoding.rose=error
 log4j.logger.org.springframework=error
 
 log4j.logger.com.focus=info
-log4j.logger.cn.focus.additivity=false
 log4j.logger.com.sohu=info
+log4j.logger.cn.focus.additivity=false
+
 
 ##控制台输出
-log4j.appender.console = org.apache.log4j.ConsoleAppender
-log4j.appender.console.Target = System.out
-log4j.appender.console.layout = org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern =[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern =[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
+log4j.additivity.stdout=false
 
-##可以单指定日志输出到某个文件：
-log4j.logger.worker-log=Info,worker-log
-log4j.appender.worker-log=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.worker-log.File=../../logs/focus-search-admin.log
-log4j.appender.worker-log.DatePattern='.'yyyy-MM-dd
-log4j.appender.worker-log.Threshold =info
-log4j.appender.worker-log.layout=org.apache.log4j.PatternLayout
-log4j.appender.worker-log.layout.ConversionPattern =%-d{yyyy-MM-dd HH:mm:ss}[%c] [%t:%r] - [%p]  %m%n
+##业务日志输出：
+log4j.logger.applog=applog
+log4j.appender.applog=cn.focus.search.log4j.AdvancedDailyRollingFileAppender
+log4j.appender.applog.File=${LOG_DIR}/app.log
+log4j.appender.applog.DatePattern='.'yyyyMMdd
+log4j.appender.applog.maxNumberOfDays=7
+log4j.appender.applog.Threshold=INFO
+log4j.appender.applog.layout=org.apache.log4j.PatternLayout
+log4j.appender.applog.layout.ConversionPattern =%-d{yyyy-MM-dd HH\:mm\:ss}[%c] [%t\:%r] - [%p]  %m%n
+log4j.additivity.applog=false
+
+##错误日志输出
+log4j.appender.stderr=cn.focus.search.log4j.AdvancedDailyRollingFileAppender
+log4j.appender.stderr.File=${LOG_DIR}/stderr.log
+log4j.appender.stderr.DatePattern='.'yyyyMMdd
+log4j.appender.stderr.maxNumberOfDays=7
+log4j.appender.stderr.Threshold=ERROR
+log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern =%-d{yyyy-MM-dd HH\:mm\:ss}[%c] [%t\:%r] - [%p]  %m%n
+log4j.additivity.stderr=false
+
