--- a/src/main/resources/config/test_sce.properties
+++ b/src/main/resources/config/test_sce.properties
@@ -1,15 +1,17 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.10.24.179:3306/focus_search?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-jdbc.username=root
-jdbc.password=light
+jdbc.url=jdbc:mysql://10.10.90.156:3306/focus_dc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+jdbc.username=develop
+jdbc.password=p3m12d
 jdbc.initialSize=100
 jdbc.minIdle=1
 jdbc.maxIdle=10
 jdbc.maxWait=3000
 jdbc.maxActive=3
 
-ik.url=http://10.10.24.179:9200/focus_house_alias/_analyze?analyzer=ik&text=
-ik.urlSmart=http://10.10.24.179:9200/focus_house_alias/_analyze?analyzer=ik_smart&text=
+#index url
+ik.url=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik&text=
+#search url
+ik.urlSmart=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=3600
