支持新闻集群和楼盘集群分类，支持使用redis差集导入每天新楼盘。

--- a/src/main/resources/config/local.properties
+++ b/src/main/resources/config/local.properties
@@ -10,8 +10,13 @@ jdbc.maxWait=3000
 jdbc.maxActive=3
 
 #index url
-ik.url=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik&text=
+ik.url1=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik&text=
 #search url
-ik.urlSmart=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik_smart&text=
+ik.urlSmart1=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik_smart&text=
+
+#index url
+ik.url2=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik&text=
+#search url
+ik.urlSmart2=http://10.10.24.179:9202/focus_house_alias/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=300
