--- a/src/main/resources/config/product.properties
+++ b/src/main/resources/config/product.properties
@@ -10,7 +10,12 @@ jdbc.maxWait=3000
 jdbc.maxActive=3
 
 
-ik.url=http://10.16.44.116:9001/focus_house_alias/_analyze?analyzer=ik&text=
-ik.urlSmart=http://10.16.44.116:9001/focus_house_alias/_analyze?analyzer=ik_smart&text=
+ik.url1=http://10.16.44.116:9001/focus_house_alias/_analyze?analyzer=ik&text=
+ik.urlSmart1=http://10.16.44.116:9001/focus_house_alias/_analyze?analyzer=ik_smart&text=
+
+#index url
+ik.url2=http://10.10.25.234:8001/focus_news_alias/_analyze?analyzer=ik&text=
+#search url
+ik.urlSmart2=http://10.10.25.234:8001/focus_news_alias/_analyze?analyzer=ik_smart&text=
 
 redis.expiredTime=86400
