--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,16 @@
  			<artifactId>sce-jedis-support</artifactId>
   			<version>1.0-SNAPSHOT</version>
         </dependency>
+    <dependency>
+   		 <groupId>com.googlecode.xmemcached</groupId>
+    	 <artifactId>xmemcached</artifactId>
+    	 <version>2.0.0</version>
+	</dependency>
+	<dependency>
+  		<groupId>cn.focus.dc.commons</groupId>
+  		<artifactId>sce-memcached-support</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+	</dependency>
         
 	</dependencies>
 
