修改测试数据库。

--- a/src/main/resources/config/local.properties
+++ b/src/main/resources/config/local.properties
@@ -1,8 +1,8 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.10.90.156:3306/focus_dc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-jdbc.username=develop
-jdbc.password=p3m12d
+jdbc.url=jdbc:mysql://10.31.85.33:3311/focus_dc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+jdbc.username=focus_dc_rw
+jdbc.password=test#rwpass
 jdbc.initialSize=100
 jdbc.minIdle=1
 jdbc.maxIdle=10
