--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	</context-param>
 	<context-param>
 		<param-name>spring.profiles.default</param-name>
-		<param-value>test_sce</param-value>
+		<param-value>test</param-value>
 	</context-param>
 	<context-param>
 		<param-name>shutdown-on-unload</param-name>
