use the new sql

--- a/src/main/resources/config/test.properties
+++ b/src/main/resources/config/test.properties
@@ -1,8 +1,8 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.31.85.33:3311/focus_dc?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-jdbc.username=focus_dc_rw
-jdbc.password=test#rwpass
+jdbc.url=jdbc:mysql://10.31.84.120:3307/newhouse_shengtai?allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
+jdbc.username=fdbuser
+jdbc.password=Wslm:11Wps
 jdbc.initialSize=100
 jdbc.minIdle=1
 jdbc.maxIdle=10
