connect the new database successfully

--- a/src/main/resources/config/test.properties
+++ b/src/main/resources/config/test.properties
@@ -1,6 +1,6 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.31.84.120:3307/newhouse_shengtai?allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
+jdbc.url=jdbc:mysql://10.31.84.120:3307/search_ik_db?allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
 jdbc.username=fdbuser
 jdbc.password=Wslm:11Wps
 jdbc.initialSize=100
