--- a/src/main/resources/config/product.properties
+++ b/src/main/resources/config/product.properties
@@ -1,9 +1,9 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.10.57.131/focus_search?useUnicode=true&characterEncoding=utf-8
-jdbc.username=focus_search
-jdbc.password=uJaMGHKvJM41BEJ
-jdbc.initialSize=10
+jdbc.url=jdbc:mysql://10.31.84.120:3307/search_ik_db?allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
+jdbc.username=fdbuser
+jdbc.password=Wslm:11Wps
+jdbc.initialSize=100
 jdbc.minIdle=1
 jdbc.maxIdle=10
 jdbc.maxWait=3000
