--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,14 @@
             <artifactId>raw-jedis-support</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+
+
     </dependencies>
 
 
